# fty-email

./: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  Makefile.am  ci_build.sh  install.xml  project.xml
builds/check_zproject/: ci_build.sh
doc/: .gitignore  Makefile.am
include/: Makefile.am  fty_email_audit_log.h  fty_email_library.h
packaging/debian/: changelog  control  copyright  fty-email.install  libfty-email-dev.install  libfty-email1.install
src/: Makemodule.am  email.cc  email.h  emailconfiguration.cc  emailconfiguration.h  fty-email.cfg.in  fty_email.cc  fty_email.h  fty_email_audit_log.cc  fty_email_audit_log.h  fty_email_classes.h  fty_email_private_selftest.cc  fty_email_selftest.cc  fty_email_server.cc  fty_email_server.h  fty_sendmail.cc
src/conf/: fty-email-log.cfg  fty-email.cfg.in  fty-email.conf  fty-email.service.in
test/: email.cpp  emailconfiguration.cpp  fty_email_private_selftest.cc  fty_email_private_selftest.h  fty_email_selftest.cc  fty_email_server.cpp  main_test.cpp
